<resources>
    <string name="app_name">Lab2</string>
    <string name="TextView">Order Info will be right here</string>
    <string name="TextField">Write down your comment for the order (necessarily)*</string>
    <string name="small_bunch">Small Bunch 20$</string>
    <string name="medium_bunch">Medium Bunch 35$</string>
    <string name="big_bunch">Big Bunch 45$</string>
    <string name="ButtonOK">OK</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="black">Black</string>
    <string name="Order">Your order is:\n</string>
    <string name="Comment">Your comment is:\n</string>
    <string name="Open">Open</string>
    <string name="empty">Storage is empty</string>
</resources>