<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/radioBunch"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/radioColor"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText">

            <RadioButton
                android:id="@+id/radioSmall"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/small_bunch" />

            <RadioButton
                android:id="@+id/radioMedium"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/medium_bunch" />

            <RadioButton
                android:id="@+id/radioBig"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/big_bunch" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioColor"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@+id/radioBunch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText">

            <RadioButton
                android:id="@+id/radioRed"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/red" />

            <RadioButton
                android:id="@+id/radioYellow"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/yellow" />

            <RadioButton
                android:id="@+id/radioBlack"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/black" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:hint="@string/TextField"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="111dp"
            android:layout_height="50dp"
            android:textSize="24sp"
            android:text="@string/ButtonOK"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
            app:layout_constraintVertical_bias="0.384" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="160dp">

    </com.google.android.material.textfield.TextInputLayout>

</FrameLayout>